// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarComparisonTable render 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          class="table-head-title table-column-event-name"
        >
          <span
            class="text-truncate"
            data-tooltip="false"
            title=""
          >
            Event Name
          </span>
        </th>
        <th
          class="table-head-title"
        >
          Total Events
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="table-column-event-name"
        >
          <span
            class="text-truncate"
            data-tooltip="false"
            title=""
          >
            Item 0
          </span>
        </td>
        <td>
          <div
            class="metric-bar-root breakdown-table-bar"
          >
            <div
              class="bar mr-2 bar-primary bar-default"
              style="width: 100%; background-color: rgb(24, 127, 255);"
            />
            <div
              class="info-wrapper align-items-center d-flex justify-content-between"
            >
              <span>
                100
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BarComparisonTable render comparing previous 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          class="table-head-title table-column-event-name"
        >
          <span
            class="text-truncate"
            data-tooltip="false"
            title=""
          >
            Event Name
          </span>
        </th>
        <th
          class="table-head-title"
        >
          Total Events
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="table-column-event-name"
        >
          <span
            class="text-truncate"
            data-tooltip="false"
            title=""
          >
            Item 0
          </span>
        </td>
        <td>
          <div
            class="metric-bar-root breakdown-table-bar"
          >
            <div
              class="bar mr-2 bar-primary bar-default"
              style="width: 100%; background-color: rgb(24, 127, 255);"
            />
            <div
              class="info-wrapper align-items-center d-flex justify-content-between"
            >
              <span>
                100
              </span>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td
          class="table-column-event-name"
        >
          <span
            class="text-truncate"
            data-tooltip="false"
            title=""
          >
            Previous Value
          </span>
        </td>
        <td>
          <div
            class="metric-bar-root breakdown-table-bar"
          >
            <div
              class="bar mr-2 lines bar-primary bar-default"
              style="width: 70%; background-color: rgb(49, 190, 136);"
            />
            <div
              class="info-wrapper align-items-center d-flex justify-content-between"
            >
              <span>
                70
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
